--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
-[AliExpress]
-appkey = 516592
-trackingId = default
+[aliexpress]
+app_key = 516592
+app_secret = ZSbP1R2mTCcTK1MDMXX4f0mB0mywQcAH
+tracking_id = default
