--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-[aliexpress]
-app_key = 516592
-app_secret = ZSbP1R2mTCcTK1MDMXX4f0mB0mywQcAH
-tracking_id = default
+[AliExpress]
+appkey = 516592
+appsecret = ZSbP1R2mTCcTK1MDMXX4f0mB0mywQcAH
+trackingid = default
